fix: dictのドットアクセスできるようにした

--- a/time_series_forecasting/notebooks/load_model.ipynb
+++ b/time_series_forecasting/notebooks/load_model.ipynb
@@ -43,6 +43,7 @@
     "from matplotlib.font_manager import FontProperties\n",
     "import matplotlib\n",
     "import sklearn.preprocessing as preprocessing\n",
+    "from omegaconf import OmegaConf\n",
     "# torch\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,21 +153,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data_model():\n",
+    "def load_config():\n",
     "    client = MlflowClient(tracking_uri=tracking_uri)\n",
     "    with tempfile.TemporaryDirectory() as dname:\n",
     "        config_path=client.download_artifacts(run_id,\"config.yaml\",dname)\n",
     "        with open(config_path) as f:\n",
     "            config=yaml.load(f,Loader=yaml.SafeLoader)\n",
-    "            \n",
+    "        config = OmegaConf.create(config)\n",
+    "    return config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_model(config):\n",
+    "    client = MlflowClient(tracking_uri=tracking_uri)\n",
+    "    with tempfile.TemporaryDirectory() as dname:\n",
     "        # data\n",
-    "        df_train=pd.read_csv(config[\"data_path\"]).iloc[:,1:]\n",
+    "        df_train=pd.read_csv(config.data_path).iloc[:,1:]\n",
     "        df_train=df_train[5::6]\n",
-    "        val_length=int(len(df_train)*config[\"val_ratio\"])\n",
+    "        val_length=int(len(df_train)*config.val_ratio)\n",
     "        array_val=df_train.iloc[-val_length:].values\n",
     "        array_train=df_train.iloc[:-val_length].values\n",
     "        scaler = preprocessing.StandardScaler().fit(array_train)\n",
@@ -180,8 +193,8 @@
     "        model_path=client.download_artifacts(run_id,model_path,dname)\n",
     "        net=network.LSTM(\n",
     "            input_size=array_train.shape[1],\n",
-    "            hidden_size=config[\"hidden_size\"],\n",
-    "            output_size=array_train.shape[1]*config[\"label_length\"],\n",
+    "            hidden_size=config.hidden_size,\n",
+    "            output_size=array_train.shape[1]*config.label_length,\n",
     "        )\n",
     "        model = train.TimeSeriesForecast(\n",
     "            model=net,\n",
@@ -196,16 +209,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "array_train,model=load_data_model()"
+    "config=load_config()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_train,model=load_data_model(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f26ca7ddac0>]"
+       "[<matplotlib.lines.Line2D at 0x7f9e669b7040>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
